--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
     "uuid": "^8.3.2",
     "web-vitals": "^1.0.1"
   },
+
+  "homepage": "https://sonali0501.github.io/ToDo/",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -43,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.1.0"
   }
 }
